# chimere

./: .gitignore  CHANGELOG.md  CODE-AUDIT.md  README.md  SECURITY-AUDIT.md  install-chimere.sh
.github/workflows/: cargo-audit.yml  (+2 more)
benchmarks/: bench_np1_96k_20260309_032953.md  benchmark-qwen35-2026-03-07.md  chimere-perf-phases-2026-03-19.md  hf-lora-scan-qwen35.md  quantification-sota-layer-by-layer.md
chimere-dflash/: README.md  chimere-dflash-plan.md  pyproject.toml  report_v7.md
chimere-dflash/chimere/: __init__.py  config.py  config_v6.py  config_v7.py  data.py  data_v5.py  data_v6.py  data_v7.py  data_v8.py  diffusion.py  engram.py  entropy_monitor.py  expert_prefetch.py  feature_fusion.py  modeling.py  modeling_eagle.py  modeling_v5.py  modeling_v6.py  modeling_v7.py  modeling_v8.py  modeling_v8_backup.py  online_buffer.py  online_spec_decode.py  spec_decode.py  target_daemon.py
chimere-dflash/extract/: CMakeLists.txt  async_io.h  build.sh  extract_batched.cpp  extract_hidden_states.cpp  extract_single_position.cpp  target_daemon.cpp
chimere-dflash/scripts/: bench_iq3_quality.py  benchmark_online.py  benchmark_spec_decode.py  benchmark_specoffload.py  benchmark_tau_v6.py  benchmark_tau_v7.py  benchmark_tau_v8.py  benchmark_wallclock.py  benchmark_wallclock_profiled.py  bulk_capture.py  bulk_capture_v2.py  capture_and_retrain.sh  check_quality.py  debug_draft.py  download_datasets.py  eval_expert_prefetch.py  extract_and_benchmark_v8.sh  extract_features_v6.py  extract_gate_weights.py  extract_qwen_weights.py  extract_single_position.py  generate_eval_prompts.py  generate_prompts.py  generate_target_responses.py  iq3_training_loop.sh  merge_datasets.py  merge_prompts.py  monitor_extraction.sh  nightly_dflash.sh  online_finetune.py  pack_blocks.py  post_c3_finetune.sh  prepare_blocks.py  re_extract_with_daemon.py  run_extraction_cpp.sh  run_extraction_ctx32.sh  test_adaptive_k.py  test_engram.py  test_entropy_monitor.py  test_eval_incr.py  (+15 more)
chimere-dflash/tests/: test_data_v8_smoke.py  test_diffusion.py  test_model.py  test_spec_decode.py
chimere-server/: ARCHITECTURE.md  Cargo.toml  ROADMAP-v2.md  build.rs  profile-analysis-2026-03-15.md  validate_logits.py
chimere-server/.cargo/: config.toml
chimere-server/benchmarks/: 2026-04-24-multislot-study.md  README.md  analysis.json  analyze.py  benchmark-e2e-2026-04-24.md  run-bench.sh  stream_bench.py  sweep-2026-04-24.csv  sweep-2026-04-24.md
chimere-server/benchmarks/raw/: gpu-pre-prod.csv  metrics-post-M1.txt  metrics-post-M2.txt  metrics-post-M4.txt  metrics-pre-M1.txt  metrics-pre-M2.txt  metrics-pre-M4.txt  metrics-prod-before-bench.txt  nvidia-smi-dmon-M1.csv  nvidia-smi-dmon-M2.csv  nvidia-smi-dmon-M4.csv  raw-M1.jsonl  raw-M2.jsonl  raw-M4.jsonl  raw-smoke.jsonl  status-post-M1.json  status-post-M2.json  status-post-M4.json  status-pre-M1.json  status-pre-M2.json  status-pre-M4.json  status-prod-before-bench.json  summary-M1.json  summary-M2.json  summary-M4.json  summary-smoke.json
chimere-server/benchmarks/stress-test/: REPORT.md  prompts.json  stress-run.sh
chimere-server/benchmarks/stress-test/raw/: dmon.csv  gpu-post.txt  gpu-pre.txt  metrics-post.txt  metrics-pre.txt  req-0-piege-logique-bateau.jsonl  req-0-piege-logique-bateau.sse  req-1-piege-code-voyelles-fr.jsonl  req-1-piege-code-voyelles-fr.sse  req-2-piege-medical-entorse-grade3.jsonl  req-2-piege-medical-entorse-grade3.sse  req-3-piege-instruction-strict.jsonl  req-3-piege-instruction-strict.sse  status-post.json  status-pre.json
chimere-server/benchmarks/sweep/: README.md  REPORT-TEMPLATE.md.tmpl  csv_append.py  driver_wrapper.py  prompts.yaml  render_report.py  sweep-bench.sh
chimere-server/benchmarks/vllm-comparison/: README.md  bench-client.py  run-comparison.sh
chimere-server/docs/: HF_MODEL_CARD_UPDATE.md  M2-prefix-cache.md  STEP7_MULTI_ARCH.md  attention-optimization-plan.md  codebase-audit.md  ggml-mmvq-iq3s-analysis.md  ggml-mmvq-port-plan.md  metrics.md  raw-forward-v4-design.md  raw-ssm-forward-plan.md  timing-analysis.md
chimere-server/ffi/: Cargo.toml  build.rs  build_ffi.sh  chimere_sampler.cpp  ggml_cuda_gemv.cu  ggml_iq3s_gemv.c  ggml_iq3s_gemv.h  ggml_matmul.c  ggml_matmul.h  test_ffi.sh
chimere-server/ffi/src/: lib.rs  main.rs
chimere-server/kernels/: chimere_kernels.cu  flash_attn_chimere.cu
chimere-server/src/: activations.rs  agent_scheduler.rs  block_diffusion.rs  block_generate.rs  candle_counter.rs  chimere_model.rs  config.rs  debug_utils.rs  deltanet_kernel.rs  engram.rs  engram_lookup.rs  entropy_router.rs  expert.rs  generate.rs  generic_model.rs  ggml_backend.rs  gguf_loader.rs  hybrid_attention.rs  lib.rs  llama_backend.rs  metrics.rs  moe_forward.rs  moe_router.rs  mtp_scheduler.rs  prefill.rs  prefix_cache.rs  profile.rs  raw_forward.rs  raw_weights.rs  rope.rs  scratch_pool.rs  server.rs  slot_scheduler.rs  state.rs  trace.rs  turboquant.rs  weight_loader.rs
chimere-server/src/kernels/: attention_raw.rs  cubin_loader.rs  deltanet_step.rs  elementwise.rs  flash_attn.rs  fused_gate_up.rs  fused_moe.rs  fused_ops.rs  gemv_q8_0.rs  ggml_gpu.rs  gqa_attention.rs  iq3s_gemv.rs  iq3s_gemv_v3.rs  kv_q8_0.rs  mod.rs  nvrtc_compile.rs  q5k_gemv.rs  q5k_mmvq_ggml.rs  raw_qmatmul.rs  topk_softmax.rs
chimere-server/src/qwen35_model/: compute_graph.rs  cuda_graph.rs  layer_attn.rs  layer_gdn.rs  lm_head.rs  mod.rs  moe_cudarc.rs  moe_ffn.rs
chimere-server/tests/: concurrent_four_slots.rs  concurrent_two_slots.rs  metrics_increment.rs  slot_leak_1000.rs  slot_queue_backpressure.rs  stop_token_imend.rs
docker/: README.md  docker-compose.yml
docs/: coding-studio-roadmap-2026-04-24.md  journey-2026-04-24.md  perf-tuning.md  scheduling-gap-analysis-2026-04-24.md  theoretical-ceiling-2026-04-24.md
paper/: 00-publication-tracker.md  01-chimere-system-paper-outline.md  02-dflash-moe-gdn-barrier-outline.md  chimere-25-ideas-logprobs-engram.md  chimere-architecture-complete-2026-03-27.md  chimere-roadmap-2026-Q2-v4.md  chimere-vision-2026.md
scripts/: bench_m1.sh  detect-gpu.py  download-model.sh
(+20 files in other folders)
