[package]
name = "chimere-deltanet"
version = "0.1.0"
edition = "2021"
description = "Gated DeltaNet attention for Chimère Engine"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.4"
memmap2 = "0.9"
byteorder = "1"
ggml-ffi = { path = "ffi" }
half = { version = "2", features = ["num-traits"] }
rand = "0.9"
tokenizers = "0.21"
once_cell = "1"
# Server feature deps (optional)
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }

[features]
cubin_fallback = []
server = ["tokio", "axum", "futures"]

[[bin]]
name = "chimere-server"
path = "src/bin/chimere-server.rs"
required-features = ["server"]

[[bin]]
name = "bench-mtp"
path = "src/bin/bench_mtp.rs"

[[bin]]
name = "test-nemotron"
path = "src/bin/test-nemotron.rs"

# M1 J2 smoke test — no model, no FFI, no VRAM.
# Exercises the slot_scheduler admission → dispatcher → closure path with
# fake inference workers (thread::sleep + string messages).
[[bin]]
name = "j2-smoke"
path = "src/bin/j2_smoke.rs"
required-features = ["server"]

# M1 J3 smoke test — real FFI multi-seq decode, 2 concurrent sequences.
# Exercises LlamaForward::forward_multi_seq and proves seq-isolation at
# the llama_decode level. Needs a model (CHIMERE_MODEL env) but defaults
# to n_gpu_layers=0 (CPU) so prod chimere-server's VRAM is not disturbed.
[[bin]]
name = "j3-smoke"
path = "src/bin/j3_smoke.rs"
required-features = ["server"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
