[package]
name = "chimere-deltanet"
version = "0.1.0"
edition = "2021"
description = "Gated DeltaNet attention for Chimère Engine"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.4"
memmap2 = "0.9"
byteorder = "1"
ggml-ffi = { path = "ffi" }
half = { version = "2", features = ["num-traits"] }
rand = "0.9"
tokenizers = "0.21"
once_cell = "1"
# Server feature deps (optional)
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }
# M1 J8 bench harness (opt-in via the `server` feature so the default
# `chimere-deltanet` build stays light). `rustls-tls` keeps the dep tree
# minimal — no openssl headers required at build time.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[features]
cubin_fallback = []
server = ["tokio", "axum", "futures", "reqwest"]

[[bin]]
name = "chimere-server"
path = "src/bin/chimere-server.rs"
required-features = ["server"]

[[bin]]
name = "bench-mtp"
path = "src/bin/bench_mtp.rs"

[[bin]]
name = "test-nemotron"
path = "src/bin/test-nemotron.rs"

# M1 J2 smoke test — no model, no FFI, no VRAM.
# Exercises the slot_scheduler admission → dispatcher → closure path with
# fake inference workers (thread::sleep + string messages).
[[bin]]
name = "j2-smoke"
path = "src/bin/j2_smoke.rs"
required-features = ["server"]

# M1 J3 smoke test — real FFI multi-seq decode, 2 concurrent sequences.
# Exercises LlamaForward::forward_multi_seq and proves seq-isolation at
# the llama_decode level. Needs a model (CHIMERE_MODEL env) but defaults
# to n_gpu_layers=0 (CPU) so prod chimere-server's VRAM is not disturbed.
[[bin]]
name = "j3-smoke"
path = "src/bin/j3_smoke.rs"
required-features = ["server"]

# M1 J4 smoke test — chunked prefill of seq 0 interleaved with seq 1 gen
# inside the same forward_multi_seq batches. Proves mixed batches
# (prefill + generate, different request_logits flags) do not leak
# across sequences. Compares seq 1's stream to an isolated baseline.
[[bin]]
name = "j4-smoke"
path = "src/bin/j4_smoke.rs"
required-features = ["server"]

# M1 J5 smoke test — per-slot sampler handles + per-slot engram biases.
# Allocates N independent C++ samplers, applies DIFFERENT engram bias
# tables per slot, and asserts the resulting logit-modified distributions
# diverge. Requires CHIMERE_SKIP_SAMPLER_INIT=0 (default) so the C++
# sampler path is exercised end-to-end.
[[bin]]
name = "j5-smoke"
path = "src/bin/j5_smoke.rs"
required-features = ["server"]

# M1 J6 smoke test — rollout safety (stop tokens, </think> flag flip,
# client-disconnect). Model-free, FFI-free.
[[bin]]
name = "j6-smoke"
path = "src/bin/j6_smoke.rs"
required-features = ["server"]

# M1 J8 bench harness — drives N concurrent /v1/chat/completions streams
# against a running chimere-server binary, reports aggregate throughput,
# per-request p50/p95/p99 latency, VRAM delta and engram-isolation.
[[bin]]
name = "bench-m1"
path = "src/bin/bench_m1.rs"
required-features = ["server"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
#   cargo test --release --features server --test concurrent_two_slots
#   cargo test --release --features server --test concurrent_four_slots
#   cargo test --release --features server --test slot_queue_backpressure
#   cargo test --release --features server --test slot_leak_1000
#
# If cargo complains about `#[tokio::test(flavor = "multi_thread")]` not
# finding the `tokio` macro, the `server` feature was forgotten — there
# is no separate [dev-dependencies] entry for tokio in this crate.
